--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,9 @@ org.gradle.configuration-cache=false
 # item to tell Gradle where to auto-provision the toolchain from, but adding
 # this flag adds an extra layer of protection.
 # See: https://docs.gradle.org/current/userguide/toolchains.html#sub:disable_auto_provision
-org.gradle.java.installations.auto-download=false
+#org.gradle.java.installations.auto-download=false
 
 # Uncomment these to build libsignal from source.
 # libsignalClientPath=../libsignal
 # org.gradle.dependency.verification=lenient
+gradle.dependency.verification=false
